@@ -1,3 +1,8 @@
+2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/base/src/calDavCalendar.js: bypass safeRefresh as
+	long as the ACLs are not loaded (Inverse edition).
+
 2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/base/content/agenda-listbox.js
